# smiles-cl

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  evaluate.py  pyproject.toml  train.py
config/: config.yaml
config/experiments/: all_against_all.yaml  smiles_against_deepsmiles.yaml  smiles_against_selfies.yaml  smiles_against_smiles.yaml  smiles_against_smiles_with_cropping.yaml  smiles_against_smiles_with_masking.yaml  smiles_against_smiles_with_masking_and_cropping.yaml
config/logging/: evaluation.yaml  wandb.yaml
config/models/: transformer.dev.yaml  transformer.lg.yaml  transformer.md.yaml  transformer.sm.yaml
smiles_cl/: __init__.py  caching.py  callbacks.py  cli.py  constants.py  dataclasses.py  distributed.py  inference.py  lightning.py  losses.py  modules.py  training.py  types.py  utils.py
smiles_cl/data/: __init__.py  datasets.py  tokenizers.py  transforms.py  utils.py
smiles_cl/data/vocabs/: selfies.txt  smiles.txt
