[tool.poetry]
name = "smiles-cl"
version = "0.1.0"
description = ""
authors = ["Kristian Klemon <kristian.klemon@gmail.com>"]
readme = "README.md"
packages = [{include = "smiles_cl"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = {version = "^2.0.1+cu118", source = "pytorch-gpu-src"}
tokenizers = "^0.13.3"
jupyter = "^1.0.0"
jupyterlab = "^4.0.3"
ipython = "^8.14.0"
wandb = "^0.15.5"
pytorch-lightning = "^2.0.5"
scikit-learn = "^1.3.0"
rdkit = "^2023.3.2"
lmdb = "^1.4.1"
pandas = "^2.0.3"
einops = "^0.6.1"
deepchem = "^2.7.1"
deepsmiles = "^1.0.1"
selfies = "^2.1.1"
transformers = "^4.30.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
scikit-plot = "^0.3.7"
numba = "^0.57.1"
umap-learn = "^0.5.3"
torchvision = {version = "^0.15.2+cu118", source = "pytorch-gpu-src"}
scipy = "^1.11.1"
tensordict = "^0.1.2"
jsonargparse = {extras = ["signatures"], version = "^4.22.1"}
toolz = "^0.12.0"
rich = "^13.4.2"
pathos = "^0.3.0"
pyarrow = "^12.0.1"
datasets = "^2.13.1"
easydict = "^1.10"
scikit-learn-intelex = "2023.1.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cases = "^3.6.14"
lmdb = "^1.4.1"
sqlitedict = "^2.1.0"
molbart = {git = "https://github.com/kklemon/Chemformer.git"}
snakemake = "^7.31.0"
deepspeed = "^0.10.0"
pysmilesutils = {git = "https://github.com/MolecularAI/pysmilesutils.git"}
submitit = "^1.4.5"
openpyxl = "^3.1.2"
unimol-tools = {git = "https://github.com/dptech-corp/Uni-Mol.git", subdirectory = "unimol_tools"}
pre-commit = "^3.3.3"

[tool.pytest.ini_options]
filterwarnings = [
  # This is transitively imported by colcon-core.
  "ignore::DeprecationWarning",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
